feat(password-reset): add password reset endpoints
- add test for password reset endpoint
- add password reset endpoint routes.
- add update Password service.
- add verify email and send email Helper.
- add password validation userSchema.
- update documentation.

[Delivers #167749954]
