# src/config/swagger.json
@@ -48,7 +48,7 @@
         ],
         "responses": {
           "201": {
-            "description": "user account created successfully",
+            "description": "",
             "schema": {
               "$ref": "#/definitions/AuthResponse"
             }
@@ -140,21 +140,55 @@
     }
   },
   "definitions": {
-    "Signup": {
+    "PasswordReset": {
       "type": "object",
       "properties": {
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
         "email": {
           "type": "string"
-        },
+        }
+      }
+    },
+    "UpdatePassword": {
+      "type": "object",
+      "properties": {
         "password": {
-          "type": "string",
-          "format": "password"
+          "type": "string"
+        }
+      }
+    },
+    "UpdatePasswordResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "data": {
+          "id": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "date"
+          },
+          "updatedAt": {
+            "type": "date"
+          }
+        },
+        "message": {
+          "type": "string"
+        }
+      }
+    },
+    "PasswordResetResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
         }
       }
     },
@@ -212,13 +246,13 @@
                 "type": "integer",
                 "format": "int64"
               },
-              "email": {
-                "type": "string"
-              },
               "firstName": {
                 "type": "string"
               },
               "lastName": {
+                "type": "string"
+              },
+              "email": {
                 "type": "string"
               }
             }
