# src/controllers/UserController.js
@@ -1,7 +1,8 @@
 import UserService from '../services/UserService';
 import Responses from '../utils/Responses';
 import Helper from '../utils/Helper';
-
+import sendEmail from '../utils/email';
+import transporter from '../utils/transporter';
 /**
  * @class
  * @description A container class for all controllers
@@ -54,5 +55,63 @@ export default class UserController {
       Responses.setError(500, 'database error');
       return Responses.send(res);
     });
+  }
+
+  /**
+   * @method
+   * @description Implements password reset endpoint
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */
+  static async resetPassword(req, res) {
+    const { email } = req.body;
+    const emailOptions = Helper.constructResetEmail(req, email);
+    const validUser = await Helper.verifyExistingEmail(email);
+    if (validUser) {
+      sendEmail(transporter, emailOptions);
+      Responses.setSuccess(200, 'a password reset link has been sent to your email');
+      return Responses.send(res);
+    }
+    Responses.setError(400, 'there is no user with such email');
+    return Responses.send(res);
+  }
+
+  /**
+   * @method
+   * @description Implements update password controller
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */
+  static async updatePassword(req, res) {
+    const { token } = req.params;
+    const data = Helper.verifyToken(token);
+    const hasExpired = data.expiryDate < Date.now();
+    if (hasExpired) {
+      Responses.setError(400, 'this address link has expired');
+      return Responses.send(res);
+    }
+    if (req.method === 'GET') {
+      Responses.setSuccess(200, 'enter your new email');
+      return Responses.send(res);
+    }
+    const { password } = req.body;
+    const [, rowsAffected] = await UserService.resetPassword(password, data.email);
+    const {
+      id, email, createdAt, updatedAt
+    } = rowsAffected;
+    Responses.setSuccess(
+      201,
+      'successfully updated your password',
+      {
+        id, email, createdAt, updatedAt
+      }
+    );
+    return Responses.send(res);
   }
 }
