# src/utils/validationSchema.js
@@ -40,5 +40,8 @@ export default {
       .label('departureDate is required and must follow this format: YYYY-MM-DD'),
     reason: str.label('reason must be a string'),
     accommodation: str.label('accommodation must be a string')
-  })
+  }),
+  updatePassword: Joi.object().keys({
+    password
+  }),
 };
